# Turing-Bot

./: .gitignore  pyproject.toml
Turing-Bot/bot/: bot.py
Turing-Bot/bot/cogs/turing/: question.py  submit.py
Turing-Bot/bot/utils/: embed.py
